{
  "version": 4,
  "terraform_version": "1.0.8",
  "serial": 22,
  "lineage": "e1605a58-8024-3a45-3855-543b37f7f1ee",
  "resources": [
    {
      "module": "module.mynetwork",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-in-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-03-06T12:28:05.272-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/abdelrahman-377520/global/firewalls/allow-in-ssh",
            "log_config": [],
            "name": "allow-in-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/abdelrahman-377520/global/networks/my-vpc",
            "priority": 1000,
            "project": "abdelrahman-377520",
            "self_link": "https://www.googleapis.com/compute/v1/projects/abdelrahman-377520/global/firewalls/allow-in-ssh",
            "source_ranges": [
              "35.235.240.0/20"
            ],
            "source_service_accounts": [],
            "source_tags": [
              "myvm"
            ],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.mynetwork.google_compute_network.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.mynetwork",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "egress-deny",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [],
            "creation_timestamp": "2023-03-06T12:28:05.238-08:00",
            "deny": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "description": "",
            "destination_ranges": [
              "0.0.0.0/0"
            ],
            "direction": "EGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/abdelrahman-377520/global/firewalls/egress-deny",
            "log_config": [],
            "name": "egress-deny",
            "network": "https://www.googleapis.com/compute/v1/projects/abdelrahman-377520/global/networks/my-vpc",
            "priority": 1000,
            "project": "abdelrahman-377520",
            "self_link": "https://www.googleapis.com/compute/v1/projects/abdelrahman-377520/global/firewalls/egress-deny",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.mynetwork.google_compute_network.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.mynetwork",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "my-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/abdelrahman-377520/global/networks/my-vpc",
            "mtu": 0,
            "name": "my-vpc",
            "project": "abdelrahman-377520",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/abdelrahman-377520/global/networks/my-vpc"
          }
        }
      ]
    },
    {
      "module": "module.mynetwork",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "restricted-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-03-06T12:28:07.887-08:00",
            "gateway_address": "10.0.2.1",
            "id": "projects/abdelrahman-377520/regions/asia-east1/subnetworks/restricted-subnet",
            "ip_cidr_range": "10.0.2.0/24",
            "name": "restricted-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/abdelrahman-377520/global/networks/my-vpc",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "abdelrahman-377520",
            "purpose": "PRIVATE",
            "region": "asia-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/abdelrahman-377520/regions/asia-east1/subnetworks/restricted-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.mynetwork.google_compute_network.my-vpc"
          ]
        }
      ]
    }
  ]
}